rendered/envs/alpha/attic/deployment-attic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: attic
spec:
  selector:
    matchLabels:
      app: attic
  template:
    metadata:
      annotations:
        checksum/config: fb6d3ed81c1d1d7e048b00f2c363db7202607680f7e4473974c64442400cf4b4
      labels:
        app: attic
    spec:
      containers:
        - command:
            - atticd
            - --config
            - /config/attic.toml
          image: oci.zebradil.dev/ghcr.io-cache/zhaofengli/attic@sha256:18574aba70fc89d2b695273fbe2e7b2f8ad7e8e786b4cc535124fbe14bada1d0
          name: attic
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      volumes:
        - name: config
          secret:
            secretName: attic-config
        - name: data
          persistentVolumeClaim:
            claimName: attic-data
