rendered/envs/alpha/attic/service-attic.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: attic
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: attic
